fix: bugs in the original plugin code
Security: tab completion now checks the command's rank, like running it
does (anyone could tab-complete another player's stored data with /pd).

Combat and stats:
- base crit chance and crit damage were swapped (30/50 → 50/30)
- armor counted twice in melee damage; arrows from SkyBlock bows now do
  SkyBlock damage; cancelled hits (sweeps) no longer deal damage or drops
- attribute stats never applied (the owner was looked up by name with a
  UUID); they now count for whoever wears the item, and only attributes
  that fit the item's type roll
- mana is capped at the pool; per-player state is dropped on quit
- abilities: one cooldown per ability, started only when the cast has the
  mana; no casting while frozen for a server handoff
- mobs: EntityRunnable no longer throws when a mob dies; custom mobs are
  recognised per entity (not every magma cube is a MagmaCube); only drops
  that roll are announced; mobs without a name tag die cleanly

Items and inventory:
- picking up more than fits no longer deletes the rest
- skull items stack (heads had a random profile id each)
- /upgrade takes nothing unless every cost can be paid, and item costs
  match SkyBlock items rather than any item of the same material
- lore: Foraging Wisdom showed Farming Wisdom, dungeon stats showed
  "(+260.0)"; unknown enchantments and gemstone slot mismatches no longer
  break an item

Also: the Heart of the Mountain menu's perks all clickable (and the tree
laid out the same on every open), menu drags and shift-clicks can't drop
items into menus, mining speed and fortune are the player's (tool, armor
and all) with the break time actually applied, Instant Transmission goes
8 blocks and stops before walls, player chat can't use colour codes, the
anticheat keeps violation counts and measures reach to the hitbox, the
floor requirements read completed floors, the bank balance is an int,
User.get handles repeated path segments, /data won't write over lists,
and 